# tokentrim

./: .env.test.example  .gitignore  .pre-commit-config.yaml  DESIGN_DOC.md  DIAGRAM.md  README.md  pyproject.toml
.github/workflows/: pr-policy.yml  tests.yml  version-tag.yml
tests/: test_bpe.py  test_client.py  test_compaction.py  test_context_base.py  test_context_pipeline.py  test_copy.py  test_creator.py  test_filter.py  test_integration_adapter.py  test_llm.py  test_openai_agents_integration.py  test_rlm.py  test_tokens.py  test_tools_base.py  test_tools_pipeline.py
tests/tokentrim/: test_cli.py  test_client.py
tokentrim/: __init__.py  __main__.py  _copy.py  _llm.py  cli.py  client.py  salience.py  working_state.py
tokentrim/consolidator/: __init__.py  agent.py  context.py  engine.py  errors.py  job.py  models.py  orchestrator.py  synthesis.py
tokentrim/context/: __init__.py  base.py  compaction.py  filter.py  pipeline.py  request.py  rlm.py  store.py
tokentrim/core/: __init__.py  copy_utils.py  llm_client.py  token_counting.py
tokentrim/errors/: __init__.py  base.py  budget.py
tokentrim/integrations/: __init__.py  base.py  openai_agents.py
tokentrim/memory/: __init__.py  agent_aware.py  extraction.py  formatting.py  freshness.py  index.py  manifest.py  markdown.py  policy.py  query.py  records.py  retriever.py  selector.py  store.py  types.py  writer.py
tokentrim/pipeline/: __init__.py  pipeline.py  requests.py
tokentrim/tools/: __init__.py  base.py  bpe.py  creator.py  pipeline.py  request.py
tokentrim/tracing/: __init__.py  atif.py  (+4 more)
(+84 files in other folders)
