[project]
name = "tokentrim"
version = "0.1.0"
description = "Context and tool optimisation for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "context", "tokens", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm>=1.0",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
]
openai-agents = [
    "openai-agents>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests/tokentrim"]
addopts = "--cov=tokentrim --cov-report=term-missing --cov-report=term --cov-fail-under=80"
